--- a/software/examples/javascript/ExampleCallback.html
+++ b/software/examples/javascript/ExampleCallback.html
@@ -34,32 +34,33 @@
                 var mt = new Tinkerforge.BrickletMultiTouch(UID, ipcon); // Create device object
                 ipcon.connect(HOST, PORT,
                     function(error) {
-                        textArea.value += 'Error: '+error+ '\n';
+                        textArea.value += 'Error: ' + error + '\n';
                     }
                 ); // Connect to brickd
                 // Don't use device before ipcon is connected
 
                 // Register touch state callback
                 mt.on(Tinkerforge.BrickletMultiTouch.CALLBACK_TOUCH_STATE,
-                    // Callback function for touch state
-                    function(touchState) {
+                    // Callback function for touch state callback
+                    function (state) {
                         var s = '';
-                        if(touchState & (1 << 12)) {
+                        if(state & (1 << 12)) {
                             s += 'In proximity, ';
                         }
-                        if((touchState & 0xFFF) === 0) {
+                        if((state & 0xfff) === 0) {
                             s += 'No electrodes touched\n';
                         }
                         else {
                             s += 'Electrodes ';
-                            for(var i=0; i<12; i++) {
-                                if(touchState & (1 << i)) {
-                                    s += parseInt(i) + ' ';
+                            for(var i = 0; i < 12; ++i) {
+                                if(state & (1 << i)) {
+                                    s += i + ' ';
                                 }
                             }
                             s += 'touched\n';
                         }
                         textArea.value += s;
+                        textArea.scrollTop = textArea.scrollHeight;
                     }
                 );
             }
